[package]
name = "advent2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="day1"
src="src/bin/day1.rs"

[[bin]]
name="day2"
src="src/bin/day2.rs"

[dev-dependencies]
pretty_assertions = "1"

[profile.bench]
opt-level = 3

[toolchain]
channel = "nightly"