[package]
name = "advent2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="day1"
src="src/bin/day1.rs"

[[bin]]
name="day2"
src="src/bin/day2.rs"

[[bin]]
name="day3"
src="src/bin/day3.rs"

[[bin]]
name="day4"
src="src/bin/day4.rs"

[[bin]]
name="day5"
src="src/bin/day5.rs"

[[bin]]
name="day6"
src="src/bin/day6.rs"

[dev-dependencies]
pretty_assertions = "1"

[dependencies]
regex = "1.7.0"

[profile.bench]
opt-level = 3

[toolchain]
channel = "nightly"